hphp/test/slow/traits/require_constraint_recurse.php.expectf
HipHop Fatal error: Class 'C' required to implement interface 'I1' by trait 'T1' (via T3) in %s on line 30
